--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -33,10 +33,6 @@
         <div class="container">
           <h1 class="jumbotron-heading">Товары</h1>
           <p class="lead text-muted">Товары для офиса и дома</p>
-          <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-          </p>
         </div>
       </section>
 
@@ -46,15 +42,10 @@
     <footer class="text-muted">
       <div class="container">
         <p class="float-right">
-          <a href="#">Back to top</a>
+          <a href="#">Вверх</a>
         </p>
         <p>
-          Album example is &copy; Bootstrap, but please download and customize
-          it for yourself!
-        </p>
-        <p>
-          New to Bootstrap? <a href="../../">Visit the homepage</a> or read our
-          <a href="../../getting-started/">getting started guide</a>.
+          &copy; {% now "Y" %}
         </p>
       </div>
     </footer>
