Добавлена возможность, добавлять продукты

--- a/catalog/templates/includes/inc_menu.html
+++ b/catalog/templates/includes/inc_menu.html
@@ -21,7 +21,7 @@
             >
           </li>
           <li>
-            <a href="#" class="text-white">Добавить товары</a>
+            <a href="{% url 'catalog:add_product' %}" class="text-white">Добавить товары</a>
           </li>
           <li>
             <a href="#" class="text-white">Контакты</a>
