Добавлен счетчик просмотров

--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -36,6 +36,9 @@
               </div>
               </div>
             </div>
+            <div class="card-footer">
+              Просмотры: {{ product.views_count }}
+            </div>
           </div>
         </div>
         {% endfor %}
