добавлены счетчик просмотров, динмаческое формироавние slug

--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -9,8 +9,8 @@
                     товаров! У нас вы найдете только самые необходимые и
                     качественные товары, которые помогут вам в работе и учебе.
                     Мы стремимся предоставить нашим клиентам лучший сервис и
-                    индивидуальный подход. Заходите к нам за надежными решениями
-                    для вашего офиса или учебного пространства!
+                    индивидуальный подход. Заходите к нам за надежными
+                    решениями для вашего офиса или учебного пространства!
                 </p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
@@ -25,13 +25,13 @@
                     </li>
                     <li>
                         <a
-                            href="{% url 'catalog:product_create' %}"
+                            href="{% url 'catalog:product_list' %}"
                             class="text-white"
-                            >Добавить товары</a
+                            >Товары</a
                         >
                     </li>
                     <li>
-                        <a href="#" class="text-white">Контакты</a>
+                        <a href="{% url 'blog:article_list' %}" class="text-white">Статьи</a>
                     </li>
                 </ul>
             </div>
