--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -2,28 +2,26 @@
 <div class="album py-5 bg-light">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
+            <div class="col-md-12">
+                <div class="card mb-12 box-shadow">
                     <img
-                        src="{{ product.image|media_filter }}"
-                        alt="{{ product.name }}"
+                        src="{{ article.image|media_filter }}"
                     />
                     <div class="card-body">
-                        <h5 class="card-title">{{ product.name }}</h5>
-                        <p class="card-text">Цена: {{ product.price }}</p>
+                        <h5 class="card-title">{{ article.title }}</h5>
                         <p class="card-text">
-                            Описание: {{ product.description }}
+                            Создано: {{ article.created_at }}
                         </p>
                         <p class="card-text">
-                            В наличии: {{ product.is_available }}
+                            Просмотры: {{ article.views_count }}
                         </p>
+                        <p class="card-text">{{ article.content }}</p>
                         <div
                             class="d-flex justify-content-between align-items-center"
                         ></div>
                     </div>
                 </div>
             </div>
-            Ф
         </div>
     </div>
 </div>
