--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -18,10 +18,8 @@
             href="https://getbootstrap.com/docs/4.0/examples/album/"
         />
 
-        <!-- Bootstrap core CSS -->
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
 
-        <!-- Custom styles for this template -->
         <link href="{% static 'css/album.css' %}" rel="stylesheet" />
     </head>
 
@@ -29,12 +27,11 @@
         <header>{% include "catalog/includes/inc_menu.html" %}</header>
 
         <main role="main">
-            <section class="jumbotron text-center">
-                <div class="container">
-                    <h1 class="jumbotron-heading">Товары</h1>
-                    <p class="lead text-muted">Товары для офиса и дома</p>
-                </div>
-            </section>
+            {% if request.path == '/' %}
+            {% include "catalog/includes/inc_header.html" %}
+            {% elif request.path == '/blog/' %}
+            {% include "blog/includes/inc_header.html" %}
+            {% endif %}
 
             {% block content %} {% endblock %}
         </main>
@@ -47,10 +44,7 @@
                 <p>&copy; {% now "Y" %}</p>
             </div>
         </footer>
-
-        <!--  Bootstrap core JavaScript
-    ==================================================  -->
-        <!-- Placed at the end of the document so the pages load faster -->
+        
         <script
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
